--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -42,7 +42,7 @@ jobs:
           MARKDOWN_CONFIG_FILE: ".markdownlint.json"
           PYTHON_RUFF_CONFIG_FILE: ../../pyproject.toml
           PYTHON_RUFF_FORMAT_COMMAND_ARGS: "--diff"
-          LOG_LEVEL: INFO
+          LOG_LEVEL: DEBUG
           SHELLCHECK_OPTS: -e SC1091 -e 2086
           VALIDATE_ALL_CODEBASE: false
           FILTER_REGEX_EXCLUDE: "^(\\.github/|\\.vscode/).*|CODE_OF_CONDUCT.md|CHANGELOG.md"
