--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -41,8 +41,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MARKDOWN_CONFIG_FILE: ".markdownlint.json"
           PYTHON_RUFF_CONFIG_FILE: ../../pyproject.toml
-          PYTHON_RUFF_FORMAT_COMMAND_ARGS: "--diff"
-          LOG_LEVEL: DEBUG
+          PYTHON_RUFF_FORMAT_CONFIG_FILE: ../../pyproject.toml
+          PYTHON_RUFF_FORMAT_CHECK_ONLY_MODE_OPTIONS: "--check --diff"
+          LOG_LEVEL: INFO
           SHELLCHECK_OPTS: -e SC1091 -e 2086
           VALIDATE_ALL_CODEBASE: false
           FILTER_REGEX_EXCLUDE: "^(\\.github/|\\.vscode/).*|CODE_OF_CONDUCT.md|CHANGELOG.md"
