Add linters to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+exclude: '^(\.github/|\.vscode/).*|CODE_OF_CONDUCT\.md|CHANGELOG\.md'
+
 repos:
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v9.3.3
@@ -16,7 +18,54 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+  # Python: Ruff
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.11 # Use the version matching your pyproject.toml
+    hooks:
+      # Run the linter
+      - id: ruff
+        args: [--fix, --config=pyproject.toml]
+      # Run the formatter
+      - id: ruff-format
+        args: [--config=pyproject.toml]
+  # Markdown: Markdownlint
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.38.0
+    hooks:
+      - id: markdownlint
+        args: [--config, .markdownlint.json]
+  # Shell: ShellCheck
+  - repo: https://github.com/koalaman/shellcheck-pre-commit
+    rev: v0.9.0
+    hooks:
+      - id: shellcheck
+        args: ["-e", "SC1091", "-e", "2086"]
+  # CSS: Stylelint
+  # Requires a .stylelintrc.json in root
+  - repo: https://github.com/b4dnewz/npm-pre-commit
+    rev: v1.1.0
+    hooks:
+      - id: stylelint
+        args: ["--fix", "**/*.css"] 
+        additional_dependencies: ['stylelint', 'stylelint-config-standard']
+
+  # CSS: Prettier (Formatting)
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
+    hooks:
+      - id: prettier
+        name: prettier-css
+        types: [css]  # Only run on CSS files
+        # If you want it to run on EVERYTHING (JS, JSON, MD), remove the 'types' line.
+
+  # Trivy (Security/Vulnerability Scanner)
+  # NOTE: This hook typically requires Docker to be running locally.
+  - repo: https://github.com/mxab/pre-commit-trivy
+    rev: v0.12.0
+    hooks:
+      - id: trivy-fs-docker
+        args: ["--scanners", "vuln,secret,config", "--severity", "HIGH,CRITICAL"]
