--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,16 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        args: [--unsafe]
       - id: check-added-large-files
+      - id: check-shebang-scripts-are-executable
+      - id: check-executables-have-shebangs
+  # Shell: shfmt
+  # - repo: https://github.com/scop/pre-commit-shfmt
+  #   rev: v3.7.0-1
+  #   hooks:
+  #     - id: shfmt
+  #       args: [-w, -i, "2"] # Write changes, indent with 2 spaces
   # Python: Ruff
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.1.11 # Use the version matching your pyproject.toml
@@ -37,22 +46,24 @@ repos:
     rev: v0.38.0
     hooks:
       - id: markdownlint
-        args: [--config, .markdownlint.json]
+        args: [--config, .github/linters/.markdownlint.json]
   # Shell: ShellCheck
-  - repo: https://github.com/koalaman/shellcheck-pre-commit
-    rev: v0.9.0
-    hooks:
-      - id: shellcheck
-        args: ["-e", "SC1091", "-e", "2086"]
+  # - repo: https://github.com/koalaman/shellcheck-precommit
+  #   rev: v0.9.0
+  #   hooks:
+  #     - id: shellcheck
+  #       args: ["-e", "SC1091", "-e", "2086"]
   # CSS: Stylelint
   # Requires a .stylelintrc.json in root
-  - repo: https://github.com/b4dnewz/npm-pre-commit
-    rev: v1.1.0
+  - repo: https://github.com/awebdeveloper/pre-commit-stylelint
+    rev: 0.0.2
     hooks:
       - id: stylelint
-        args: ["--fix", "**/*.css"] 
-        additional_dependencies: ['stylelint', 'stylelint-config-standard']
-
+        args: ["--fix", "**/*.css"]
+        additional_dependencies:
+          - stylelint
+          - stylelint-config-standard@20.0.0
+          - stylelint-config-prettier
   # CSS: Prettier (Formatting)
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
@@ -61,11 +72,3 @@ repos:
         name: prettier-css
         types: [css]  # Only run on CSS files
         # If you want it to run on EVERYTHING (JS, JSON, MD), remove the 'types' line.
-
-  # Trivy (Security/Vulnerability Scanner)
-  # NOTE: This hook typically requires Docker to be running locally.
-  - repo: https://github.com/mxab/pre-commit-trivy
-    rev: v0.12.0
-    hooks:
-      - id: trivy-fs-docker
-        args: ["--scanners", "vuln,secret,config", "--severity", "HIGH,CRITICAL"]
