--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -43,7 +43,7 @@ jobs:
           PYTHON_RUFF_CONFIG_FILE: ../../pyproject.toml
           PYTHON_RUFF_FORMAT_CONFIG_FILE: ../../pyproject.toml
           PYTHON_RUFF_FORMAT_CHECK_ONLY_MODE_OPTIONS: "--check --diff"
-          LOG_LEVEL: DEBUG
+          LOG_LEVEL: INFO
           SHELLCHECK_OPTS: -e SC1091 -e 2086
           VALIDATE_ALL_CODEBASE: true
           FILTER_REGEX_EXCLUDE: "^(\\.github/|\\.vscode/).*|CODE_OF_CONDUCT.md|CHANGELOG.md"
