--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -45,7 +45,7 @@ jobs:
           PYTHON_RUFF_FORMAT_CHECK_ONLY_MODE_OPTIONS: "--check --diff"
           LOG_LEVEL: INFO
           SHELLCHECK_OPTS: -e SC1091 -e 2086
-          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_ALL_CODEBASE: false
           FILTER_REGEX_EXCLUDE: "^(\\.github/|\\.vscode/).*|CODE_OF_CONDUCT.md|CHANGELOG.md"
           VALIDATE_BIOME_FORMAT: false
           VALIDATE_PYTHON_BLACK: false
