--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@
 
 
 site_name: Universal Commerce Protocol (UCP)
+site_url: wry-ry.github.io/ucp/
 site_description: >
   The Universal Commerce Protocol (UCP) is a solution for enabling gen AI agents to make payments on
   behalf of users, safely, securely, and in a decentralized and privacy protecting manner.
