feat: split mkdocs configuration for versioned specification
- Create 'mkdocs-spec.yml' for versioned technical specification content.
- Update 'mkdocs.yml' to serve as the global/root site configuration, linking to the versioned spec at '/specification/latest/'.
- Update paths to use '/specification/' instead of '/spec/'.

--- a/mkdocs-spec.yml
+++ b/mkdocs-spec.yml
@@ -13,26 +13,44 @@
 #   limitations under the License.
 
 
-site_name: Universal Commerce Protocol (UCP)
-site_url: https://ucp.dev/  # Required for the llmstxt plugin to work.
-site_description: >
-  The Universal Commerce Protocol (UCP) is a solution for enabling gen AI agents to make payments on
-  behalf of users, safely, securely, and in a decentralized and privacy protecting manner.
-  This protocol is a part of the broader ecosystem, which includes agentic protocols like A2A and
-  MCP, and encompasses the global nature of payments.
-site_dir: site
+site_name: UCP Specification
+site_url: https://ucp.dev/specification/
+site_description: Technical specification for the Universal Commerce Protocol.
+site_dir: site-specification
 edit_uri: edit/main/docs/
 
 # Navigation
 nav:
-  - Home: index.md
-  - Core Concepts: documentation/core-concepts.md
-  - Playground: playground.md
-  - Specification: /specification/latest/
-  - UCP and AP2: documentation/ucp-and-ap2.md
-  - Roadmap: documentation/roadmap.md
+  - Overview: specification/overview.md
+  - Checkout Capability:
+    - Overview: specification/checkout.md
+    - HTTP/REST Binding: specification/checkout-rest.md
+    - MCP Binding: specification/checkout-mcp.md
+    - A2A Binding: specification/checkout-a2a.md
+    - EP Binding: specification/embedded-checkout.md
+    - AP2 Mandates Extension: specification/ap2-mandates.md
+    - Buyer Consent Extension: specification/buyer-consent.md
+    - Discounts Extension: specification/discount.md
+    - Fulfillment Extension: specification/fulfillment.md
+  - Cart Capability:
+    - Overview: specification/cart.md
+    - HTTP/REST Binding: specification/cart-rest.md
+    - MCP Binding: specification/cart-mcp.md
+  - Order Capability: specification/order.md
+  - Identity Linking Capability: specification/identity-linking.md
+  - Payment Handlers:
+    - Guide: specification/payment-handler-guide.md
+    - Template: specification/payment-handler-template.md
+    - Tokenization Guide: specification/tokenization-guide.md
+    - Examples:
+      - Processor Tokenizer: specification/examples/processor-tokenizer-payment-handler.md
+      - Platform Tokenizer: specification/examples/platform-tokenizer-payment-handler.md
+      - Encrypted Credential: specification/examples/encrypted-credential-handler.md
+  - Schema Authoring: documentation/schema-authoring.md
+  - Reference: specification/reference.md
+  - Versioning: specification/versioning.md
 
-repo_name: UCP on GitHub # Override repo name to be shorter on site header.
+repo_name: UCP on GitHub
 repo_url: https://github.com/Universal-Commerce-Protocol/ucp
 
 # Copyright
@@ -58,6 +76,8 @@ extra:
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
       make our documentation better.
+  version:
+    provider: mike
 
 # Configuration
 theme:
@@ -157,15 +177,6 @@ plugins:
   - llmstxt:
       full_output: llms-full.txt
       sections:
-        Introduction:
-          - index.md
-          - documentation/core-concepts.md
-        UCP and AP2:
-          - documentation/ucp-and-ap2.md
-        Playground:
-          - playground.md
-        Roadmap:
-          - documentation/roadmap.md
         Specification Overview:
           - specification/overview.md
         Checkout Capability:
