--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,6 @@ edit_uri: edit/main/docs/
 nav:
   - Home: index.md
   - Core Concepts: documentation/core-concepts.md
-  - Playground: playground.md
   - Specification:
     - Overview: specification/overview.md
     - Checkout Capability:
@@ -50,12 +49,11 @@ nav:
         - Processor Tokenizer: specification/examples/processor-tokenizer-payment-handler.md
         - Platform Tokenizer: specification/examples/platform-tokenizer-payment-handler.md
         - Encrypted Credential: specification/examples/encrypted-credential-handler.md
-    - Schema Authoring: documentation/schema-authoring.md
     - Reference: specification/reference.md
-    - Versioning: specification/versioning.md
+    - Playground: specification/playground.md
   - UCP and AP2: documentation/ucp-and-ap2.md
   - Roadmap: documentation/roadmap.md
-
+  - Versioning: versioning.md
 repo_name: UCP on GitHub # Override repo name to be shorter on site header.
 repo_url: https://github.com/Universal-Commerce-Protocol/ucp
 
@@ -65,6 +63,7 @@ copyright: Copyright 2026 UCP Authors. Licensed under the <a href="https://githu
 # Custom CSS
 extra_css:
   - stylesheets/custom.css
+
 
 #Global Constants
 extra:
@@ -116,6 +115,8 @@ theme:
       primary: black
       accent: indigo
   features:
+    - navigation.tabs
+    - navigation.tabs.sticky
     - announce.dismiss
     - content.code.annotate
     - content.code.copy
@@ -127,7 +128,6 @@ theme:
     - navigation.indexes
     - navigation.instant
     - navigation.instant.progress
-    - navigation.path
     - navigation.top
     - navigation.tracking
     - toc.follow
@@ -181,41 +181,30 @@ plugins:
   - llmstxt:
       full_output: llms-full.txt
       sections:
-        Introduction:
+        Overview:
           - index.md
           - documentation/core-concepts.md
-        UCP and AP2:
           - documentation/ucp-and-ap2.md
-        Playground:
-          - playground.md
-        Roadmap:
           - documentation/roadmap.md
-        Specification Overview:
+          - versioning.md
+        Specification:
           - specification/overview.md
-        Checkout Capability:
           - specification/checkout.md
           - specification/checkout-rest.md
           - specification/checkout-mcp.md
           - specification/checkout-a2a.md
-        Checkout Extensions:
+          - specification/embedded-checkout.md
           - specification/ap2-mandates.md
           - specification/buyer-consent.md
           - specification/discount.md
-          - specification/embedded-checkout.md
           - specification/fulfillment.md
-        Order Capability:
           - specification/order.md
-        Identity Linking Capability:
           - specification/identity-linking.md
-        Payment Handlers:
           - specification/payment-handler-guide.md
           - specification/payment-handler-template.md
           - specification/tokenization-guide.md
-        Payment Handler Examples:
           - specification/examples/processor-tokenizer-payment-handler.md
           - specification/examples/platform-tokenizer-payment-handler.md
           - specification/examples/encrypted-credential-handler.md
-        Schema Authoring:
-          - documentation/schema-authoring.md
-        Reference:
           - specification/reference.md
+          - specification/playground.md
