feat(docs): enable navigation.sections to improve mobile navigation visibility

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,6 +117,7 @@ theme:
       accent: indigo
   features:
     - navigation.tabs
+    - navigation.sections
     - navigation.tabs.sticky
     - announce.dismiss
     - content.code.annotate
