--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ packages = []
 dev = [
     "datamodel-code-generator[http]>=0.50.0",
     "mike==2.1.3",
+    "jsonschema>=4.19.0",
     "mkdocs-llmstxt==0.5.0",
     "mkdocs-macros-plugin==1.4.0",
     "mkdocs-material[imaging]>=9.0.0",
